# Necronomicon

./: .gcc-flags.json  .gitignore  ByteString  DynamicTreeTest.aux  DynamicTreeTest.hp  DynamicTreeTest.prof  DynamicTreeTest.ps  Necronomicon.cabal  README.md  necronet.daemon  necronet.sh  talk.txt
CTest/: Main.hs
Necro/: Main.hs
NecroNet/: Main.hs
PatternTest/: Main.hs
Scripts/: necronet.sh  rebuild_ctests.sh
SigTest/: Main.hs
Tests/AudioEngineTest/: Main.hs
Tests/CTest/: CTest.c  Main.hs
Tests/DynamicTreeTest/: Main.hs
Tests/GenerativeTest/: Main.hs
Tests/NetworkingTest/: Main.hs
Tests/PatternTest/: .#Main.hs  Main.hs
Tests/PriorityQueueTest/: Main.hs
Tests/Shootout/: Main.hs
Tests/SigTest/: InteractiveTest  InteractiveTest.hs  Main.hs  NecroMain.hs
Tests/StressTest/: Main.hs
Tests/UGenTest/: Main.hs
Tools/GenCalcBindings/: Main.hs
c_lib/: .#Necronomicon.c  Necronomicon.c  Necronomicon.h  Render.c
c_lib/Necronomicon/: AudioRuntime.c  AudioRuntime.h  BufferUGens.c  DelayUGens.c  DelayUGens.h  DistortionUGens.c  DynamicsUGens.c  Endian.h  FilterUGens.c  GraphicsRuntime.c  IOUGens.c  LFUGens.c  NoiseUGens.c  OperatorUGens.c  OscUGens.c  PanUGens.c  Random.h  RangeUGens.c  Render.c  ReverbUGens.c  TimeUGens.c  UGenUtil.h  Util.h
c_lib/Necronomicon/Containers/: HashTable.c  HashTable.h
c_lib/Necronomicon/UGens/: BufferUGens.c  DelayUGens.c  DistortionUGens.c  DynamicsUGens.c  FilterUGens.c  IOUGens.c  LFUGens.c  NoiseUGens.c  OperatorUGens.c  OscUGens.c  PanUGens.c  RangeUGens.c  ReverbUGens.c  TimeUGens.c
include/: .#necro.c  necro.c
repl/: .ghci
resources/fonts/: EurostileBold-12.vlw
resources/shaders/: ambient-frag.glsl  ambient-vert.glsl  blur-frag.glsl  colorTest-frag.glsl  colored-frag.glsl  colored-vert.glsl  osc-frag.glsl  osc-vert.glsl  player-frag.glsl  player-vert.glsl  sphere-frag.glsl  sphere-vert.glsl  terminal-frag.glsl  terminal-vert.glsl  terrain-frag.glsl  terrain-vert.glsl  uvTest-frag.glsl
src/: .#Main.hs  .#Necronomicon.hs  Main.hs  Necronomicon.hs
src/Necronomicon/: .#Patterns.hs  .#Runtime.hs  Entity.hs  EntityVector.hs  FRP.hs  Game.hs  Graphics.hs  Interactive.hs  Linear.hs  Math.hs  Networking.hs  Noise.hs  Pattern.hs  Patterns.hs  Patterns_flymake.hs  Physics.hs  Runtime.hs  UGen.hs  UGenC.hs  UGenPrim.hs  UGen_flymake.hs  Util.hs  Utility.hs
src/Necronomicon/FRP/: .#GUI.hs  .#Signal.hs  Applicative.hs  Audio.hs  AudioSignal.hs  Combinators.hs  Control.hs  DemandSignal.hs  Event.hs  GUI.hs  Input.hs  Networking.hs  Runtime.hs  Signal'.hs  Signal.hs  SignalA.hs  SignalType.hs  State.hs  Time.hs  Types.hs  VarSignal.hs
src/Necronomicon/FRP/oldsignals/: Audio.hs  GUI.hs  Input.hs  Runtime.hs  Time.hs
src/Necronomicon/Graphics/: .#Text.hs  BufferObject.hs  Camera.hs  Color.hs  HalfEdge.hs  Mesh.hs  Model.hs  Rendering.hs  Resources.hs  SceneObject.hs  Shader.hs  Text.hs  Texture.hs
src/Necronomicon/Language/: Layout.hs
src/Necronomicon/Linear/: AABB.hs  Capsule.hs  GeoPrimitive.hs  Line.hs  Math.hs  Matrix.hs  OBB.hs  Plane.hs  Quaternion.hs  Ray.hs  Sphere.hs  Triangle.hs  Vector.hs
src/Necronomicon/Networking/: Client.hs  Message.hs  Server.hs  SyncObject.hs  Types.hs  User.hs
src/Necronomicon/Noise/: DiamondSquare.hs  LSystem.hs  Simplex.hs  Wolfram.hs
src/Necronomicon/Physics/: Collider.hs  DynamicTree.hs  GJK.hs  Octree.hs
src/Necronomicon/Util/: Functions.hs  Grid.hs  PriorityQueue.hs  TGA.hs
