Name:                   Necronomicon
Version:                0.0
Description:            Deterministic Audio Engine
License:                GPL
License-file:           LICENSE
Author:                 Chad McKinney and Curtis McKinney
Maintainer:             chad@chadmckinneyaudio.com
Build-Type:             Simple
Cabal-Version:          >=1.10
data-dir: resources
data-files:
    textures/*.tga
    fonts/*.ttf
    shaders/*.glsl
    misc/minblep.mat
    samples/*.wav

Flag pkgConfig
  description: Use pkg-config tool for check version and presence of jack
  default:     True

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    Includes:           jack/jack.h, jack/midiport.h,sndfile.h
    If flag(pkgConfig)
        -- There seem to be two lines of JACK:
        --   JACK1 as used by Ubuntu, e.g. jack-0.118.0
        --   JACK2 as used by Suse, e.g. jack-1.9.0
        PkgConfig-depends: jack (>=0.0 && <0.125) || (>=1.9.0 && <1.9.8), sndfile (>= 1.0.2)
    Else
        -- use extra-libraries, if pkg-config fails
        --   http://hackage.haskell.org/trac/hackage/ticket/170
        Extra-Libraries: jack, sndfile
    Include-Dirs: 		c_lib
    Install-Includes:	Necronomicon.h
    C-Sources:    		c_lib/Necronomicon.c
    ghc-options:        -threaded -O3 -Wall -Werror
    default-extensions: FlexibleInstances MultiParamTypeClasses ForeignFunctionInterface QuasiQuotes TemplateHaskell TypeFamilies BangPatterns

    exposed-modules:
        Necronomicon
        Necronomicon.UGen
        Necronomicon.Runtime,
        Necronomicon.Util,
        Necronomicon.Util.PriorityQueue

    other-modules:
        Necronomicon.Language.Layout
        Necronomicon.Util.TGA,
        Necronomicon.Math
        Necronomicon.Utility
        Necronomicon.Networking
        Necronomicon.Networking.Client
        Necronomicon.Networking.Server
        Necronomicon.Networking.Message
        Necronomicon.Patterns
        Necronomicon.FRP
        Necronomicon.FRP.Signal
        Necronomicon.FRP.Event
        Necronomicon.FRP.GUI
        Necronomicon.Linear
        Necronomicon.Linear.Plane
        Necronomicon.Linear.Sphere
        Necronomicon.Linear.AABB
        Necronomicon.Linear.Ray
        Necronomicon.Linear.Triangle
        Necronomicon.Linear.Math
        Necronomicon.Linear.Matrix
        Necronomicon.Linear.Quaternion
        Necronomicon.Linear.Vector
        Necronomicon.Noise
        Necronomicon.Noise.DiamondSquare
        Necronomicon.Noise.Simplex
        Necronomicon.Graphics
        Necronomicon.Graphics.BufferObject
        Necronomicon.Graphics.Camera
        Necronomicon.Graphics.Mesh
        Necronomicon.Graphics.Shader
        Necronomicon.Graphics.Color
        Necronomicon.Graphics.SceneObject
        Necronomicon.Graphics.Text
        Necronomicon.Graphics.Texture
        Necronomicon.Graphics.Model
        Paths_Necronomicon
    Build-Depends:
        base             >= 3 && < 5,
        stm              >= 2.4.0,
        containers       >= 0.4.0,
        vector           >= 0.10.10,
        random           >= 1.0.1.1,
        template-haskell >= 2.7.0,
        parsec           >= 3.1.0,
        network          >= 2.6.0.0,
        bytestring       >= 0.9.1.4,
        GLFW-b           >= 1.4.0,
        OpenGL           >= 2.8,
        OpenGLRaw        >= 1.5.0,
        mtl              >= 2.1.3.0,
        freetype2        >= 0.1.1,
        binary           >= 0.7.0

executable PatternTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Werror -debug
    hs-source-dirs:   Tests/PatternTest
    default-extensions: QuasiQuotes TemplateHaskell
    build-depends:
        base             == 4.*,
        mtl              >= 2.1.3.0,
        Necronomicon

executable NecroNet
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Werror
    hs-source-dirs:   NecroNet
    default-extensions:
    build-depends:
        base             == 4.*,
        Necronomicon

executable SigTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -O3 -Wall -Werror
    hs-source-dirs:   Tests/SigTest
    default-extensions: QuasiQuotes TemplateHaskell ParallelListComp OverloadedLists
    build-depends:
        base             == 4.*,
        Necronomicon,
        vector

executable StressTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -O3 -Wall -Werror -debug
    hs-source-dirs:   Tests/StressTest
    default-extensions: QuasiQuotes TemplateHaskell ParallelListComp
    build-depends:
        base             == 4.*,
        Necronomicon,
        vector

executable UGenTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -O3 -Wall -Werror -debug
    hs-source-dirs:   Tests/UGenTest
    default-extensions: QuasiQuotes TemplateHaskell ParallelListComp
    build-depends:
        base             == 4.*,
        Necronomicon,
        vector

executable CTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Werror -debug
    hs-source-dirs:   Tests/CTest
    default-extensions:
    build-depends:
        base             == 4.*,
        Necronomicon

executable AudioEngineTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Werror -debug
    hs-source-dirs:   Tests/AudioEngineTest
    default-extensions: OverloadedLists
    build-depends:
        base             == 4.*,
        hosc             >= 0.14,
        mtl              >= 2.1.3.0,
        Necronomicon

executable PriorityQueueTest
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Werror -debug
    hs-source-dirs:   Tests/PriorityQueueTest
    default-extensions:
    build-depends:
        base             == 4.*,
        Necronomicon,
        QuickCheck
